--- a/Share Beauty App/Base.lproj/SMBKCategoryViewController.storyboard
+++ b/Share Beauty App/Base.lproj/SMBKCategoryViewController.storyboard
@@ -26,15 +26,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Color Makeup" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFK-ss-CFV">
-                                <rect key="frame" x="70" y="300" width="177" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="22"/>
-                                <color key="textColor" red="0.79420336790000001" green="0.037855404969999999" blue="0.089164817049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Complexion" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQS-qQ-Mlo">
-                                <rect key="frame" x="70" y="19" width="177" height="38"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Complexion" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQS-qQ-Mlo">
+                                <rect key="frame" x="71" y="28" width="249" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="22"/>
                                 <color key="textColor" red="0.79420336790000001" green="0.037855404969999999" blue="0.089164817049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -87,11 +80,20 @@
                                     <action selector="onTapViewBtn:" destination="TYu-Ly-iev" eventType="touchUpInside" id="Ge9-CK-BuO"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Color Makeup" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFK-ss-CFV">
+                                <rect key="frame" x="71" y="310" width="249" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="22"/>
+                                <color key="textColor" red="0.79420336790000001" green="0.037855404969999999" blue="0.089164817049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="mColorMakeupLabel" destination="AFK-ss-CFV" id="vwv-IP-L5k"/>
                         <outlet property="mColorMakeupView" destination="ySQ-PW-YFp" id="g0w-EU-nCf"/>
+                        <outlet property="mComplexionLabel" destination="BQS-qQ-Mlo" id="IrP-SF-avU"/>
                         <outlet property="mComplexionView" destination="v3S-RL-Gck" id="PUM-Zt-jse"/>
                         <outlet property="mLeftBtn" destination="JVJ-ga-hMB" id="cca-nb-gwp"/>
                         <outlet property="mRightBtn" destination="D96-U7-3Ax" id="8ne-8V-bXA"/>
