[SBASMK-43] LXのマージンTop調整

--- a/Share Beauty App/Base.lproj/LuxuryFiveSecretsTopViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LuxuryFiveSecretsTopViewController.storyboard
@@ -27,7 +27,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qTc-4f-LWm">
-                                <rect key="frame" x="0.0" y="42" width="1024" height="726"/>
+                                <rect key="frame" x="0.0" y="22" width="1024" height="746"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWj-xg-XyB">
                                         <rect key="frame" x="0.0" y="-10" width="1024" height="736"/>
@@ -69,14 +69,14 @@
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNb-Zk-mXR" customClass="LXHeaderView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="42" width="1024" height="50"/>
+                                <rect key="frame" x="0.0" y="22" width="1024" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="PXW-te-I4R"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ij-pp-yD4" customClass="LXNavigationView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="1024" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="1024" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="3zh-bL-815"/>
@@ -90,8 +90,8 @@
                             <constraint firstItem="QNb-Zk-mXR" firstAttribute="leading" secondItem="kuE-RY-dup" secondAttribute="leading" id="IHP-6P-Slj"/>
                             <constraint firstAttribute="trailing" secondItem="QNb-Zk-mXR" secondAttribute="trailing" id="JCx-Ur-AC4"/>
                             <constraint firstItem="ovb-LQ-fHm" firstAttribute="top" secondItem="qTc-4f-LWm" secondAttribute="bottom" id="LiZ-i0-4EL"/>
-                            <constraint firstItem="qTc-4f-LWm" firstAttribute="top" secondItem="hYj-NU-Jf9" secondAttribute="bottom" constant="22" id="QYY-Fn-oDU"/>
-                            <constraint firstItem="QNb-Zk-mXR" firstAttribute="top" secondItem="hYj-NU-Jf9" secondAttribute="bottom" constant="22" id="a2U-Mz-cpG"/>
+                            <constraint firstItem="qTc-4f-LWm" firstAttribute="top" secondItem="kuE-RY-dup" secondAttribute="top" constant="22" id="QYY-Fn-oDU"/>
+                            <constraint firstItem="QNb-Zk-mXR" firstAttribute="top" secondItem="qTc-4f-LWm" secondAttribute="top" id="a2U-Mz-cpG"/>
                             <constraint firstItem="6Ij-pp-yD4" firstAttribute="leading" secondItem="kuE-RY-dup" secondAttribute="leading" id="l65-dD-BXf"/>
                             <constraint firstAttribute="trailing" secondItem="6Ij-pp-yD4" secondAttribute="trailing" id="nMQ-4G-m9I"/>
                             <constraint firstItem="6Ij-pp-yD4" firstAttribute="top" secondItem="QNb-Zk-mXR" secondAttribute="bottom" id="uvo-mn-5Yl"/>
