Lifestyleのヘッダー文字の幅調整

--- a/Share Beauty App/Base.lproj/LifeStyleViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LifeStyleViewController.storyboard
@@ -30,8 +30,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWZ-GI-f3H">
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beauty tailors solutions" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQc-dF-cFB">
-                                        <rect key="frame" x="50" y="40" width="600" height="48"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Beauty tailors solutions" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQc-dF-cFB">
+                                        <rect key="frame" x="50" y="40" width="900" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="600" id="3vc-Hu-RaS"/>
                                         </constraints>
