--- a/Share Beauty App/Views/UtmMask/UtmMaskEfficacyView.xib
+++ b/Share Beauty App/Views/UtmMask/UtmMaskEfficacyView.xib
@@ -12,88 +12,73 @@
         <array key="Reader-Bold.otf">
             <string>Reader-Bold</string>
         </array>
-        <array key="Reader-Regular.otf">
-            <string>Reader</string>
-        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UtmMaskEfficacyView" customModule="Share_Beauty_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
+            <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xpa-p5-UGF">
-                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="op4-Fg-9Bv">
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fBA-L4-0fQ" userLabel="ContentView">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="1026"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F7J-zq-MfD">
+                            <rect key="frame" x="0.0" y="0.0" width="1024" height="2052"/>
                             <subviews>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRY-do-qRS">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                </view>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XcZ-rd-TyU">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZjI-ky-wYo">
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="utm_mask_efficacy01.png" translatesAutoresizingMaskIntoConstraints="NO" id="lqV-ZV-7E2">
-                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="utm_mask_efficacy_graph.png" translatesAutoresizingMaskIntoConstraints="NO" id="lqV-ZV-7E2">
+                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <bool key="isElement" value="YES"/>
+                                            </accessibility>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When the mask is used within 72 hours of exposure to stress, it truly prevents skin damage!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTN-5V-tz5">
-                                            <rect key="frame" x="20" y="15" width="708" height="64"/>
+                                            <rect key="frame" x="29" y="21" width="708" height="64"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sm8-OR-y1v">
-                                            <rect key="frame" x="140" y="100" width="670" height="97"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <string key="text">To replicate a harsh environment, Shiseido conducted a test in which researchers applied a pharmaceutical agent to the skin to create an artificially rough condition. Skin applied only with the roughness-inducing agent showed damage continued to escalate 72 hours after application. On the other hand, skin applied with the roughness-inducing agent as well as Ultimune Serum and Amplifying Night Mask showed no signs of damage 72 hours later. 
-</string>
-                                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="15"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="1026" id="awk-WU-pIR"/>
+                                <constraint firstAttribute="height" constant="2052" id="Ah7-MG-E1T"/>
                             </constraints>
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="fBA-L4-0fQ" secondAttribute="trailing" id="JN8-3m-Ul6"/>
-                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="leading" secondItem="xpa-p5-UGF" secondAttribute="leading" id="Kos-Ev-Vt4"/>
-                        <constraint firstAttribute="bottom" secondItem="fBA-L4-0fQ" secondAttribute="bottom" id="RFq-uz-7IN"/>
-                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="top" secondItem="xpa-p5-UGF" secondAttribute="top" id="X5O-A4-Fm0"/>
-                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="width" secondItem="xpa-p5-UGF" secondAttribute="width" id="lht-qP-ID4"/>
+                        <constraint firstItem="F7J-zq-MfD" firstAttribute="leading" secondItem="op4-Fg-9Bv" secondAttribute="leading" id="1wG-kl-u7H"/>
+                        <constraint firstItem="F7J-zq-MfD" firstAttribute="top" secondItem="op4-Fg-9Bv" secondAttribute="top" id="V3r-le-o1p"/>
+                        <constraint firstItem="F7J-zq-MfD" firstAttribute="width" secondItem="op4-Fg-9Bv" secondAttribute="width" id="dQt-Fq-XAz"/>
+                        <constraint firstAttribute="bottom" secondItem="F7J-zq-MfD" secondAttribute="bottom" id="ehN-jq-kLq"/>
+                        <constraint firstAttribute="trailing" secondItem="F7J-zq-MfD" secondAttribute="trailing" id="xy3-C3-lIg"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="xpa-p5-UGF" secondAttribute="trailing" id="2nq-pM-axg"/>
-                <constraint firstItem="xpa-p5-UGF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YuL-zD-prl"/>
-                <constraint firstItem="xpa-p5-UGF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="duS-wZ-web"/>
-                <constraint firstAttribute="bottom" secondItem="xpa-p5-UGF" secondAttribute="bottom" id="woJ-Xa-Gsr"/>
+                <constraint firstItem="op4-Fg-9Bv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Lfv-Ay-xUH"/>
+                <constraint firstItem="op4-Fg-9Bv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Yta-a4-7R0"/>
+                <constraint firstAttribute="bottom" secondItem="op4-Fg-9Bv" secondAttribute="bottom" id="bmV-Gw-7tc"/>
+                <constraint firstAttribute="trailing" secondItem="op4-Fg-9Bv" secondAttribute="trailing" id="sFx-3H-OJo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="mContentView" destination="fBA-L4-0fQ" id="p9X-4S-N89"/>
-                <outlet property="mGraphV" destination="XcZ-rd-TyU" id="5cL-gM-528"/>
-                <outlet property="mPercentageV" destination="cRY-do-qRS" id="FT2-yV-gWB"/>
-                <outlet property="mScrollV" destination="xpa-p5-UGF" id="KbF-9m-qs9"/>
-                <outlet property="mSubTextLabel" destination="sm8-OR-y1v" id="CWV-qM-Je4"/>
-                <outlet property="mTitleLabel" destination="bTN-5V-tz5" id="1Bj-eT-ZIR"/>
+                <outlet property="mContentView" destination="F7J-zq-MfD" id="Pxv-Oa-Sfr"/>
+                <outlet property="mGraphV" destination="ZjI-ky-wYo" id="fr6-NF-FZE"/>
+                <outlet property="mScrollV" destination="op4-Fg-9Bv" id="trF-Rq-S0d"/>
+                <outlet property="mTitleLabel" destination="bTN-5V-tz5" id="exk-BV-fsA"/>
             </connections>
+            <point key="canvasLocation" x="60" y="53.5"/>
         </view>
     </objects>
     <resources>
-        <image name="utm_mask_efficacy01.png" width="4202" height="2140"/>
+        <image name="utm_mask_efficacy_graph.png" width="1422" height="725"/>
     </resources>
 </document>
